fix(https): change base64 package dependency